[tool.poetry]
name = "pygenpp"
version = "0.0.1"
description = "Ultra simple C++ build system via CMake"
authors = ["Mikadore <anonymous1337mm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mikadore/pygenpp"

[tool.poetry.dependencies]
python = "^3.11"
sh = "^2.0.6"
click = "^8.1.7"
dataclass-binder = "^0.3.4"
logging4 = "^0.0.2"

[tool.poetry.scripts]
pygenpp = "pygenpp.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
